Update dependencies and fix some scrollbar styling

--- a/src/global.styl
+++ b/src/global.styl
@@ -55,8 +55,9 @@ hr
 ::-webkit-scrollbar
 	position fixed
 	width 1rem
-	height 0.5rem
-	&-track, &-corner
+	height 1rem
+	&-track
+	&-corner
 		background #282625
 		+lightTheme()
 			background white
